--- a/404.md
+++ b/404.md
@@ -7,4 +7,4 @@ title    :  Halaman Tidak Ditemukan
 
 # Halaman Tidak Ditemukan
 
-Halaman yang Anda cari sepertinya telah dihapus atau tidak pernah ada di Ransel. Silahkan kunjungi <a href="http://tertanda.com" title="Halaman Utama Ransel">halaman utama</a> untuk memulai dari awal, atau baca beberapa artikel rekomendasi di bawah ini.
+Halaman yang Anda cari sepertinya telah dihapus atau tidak pernah ada di Ransel. Silahkan kunjungi <a href="https://ransel.org" title="Halaman Utama Ransel">halaman utama</a> untuk memulai dari awal, atau baca beberapa artikel rekomendasi di bawah ini.
